bug fixes, more readable code, fixed instructions

--- a/styles/partials/_mediaQueries.scss
+++ b/styles/partials/_mediaQueries.scss
@@ -19,5 +19,9 @@
     .overlay {
         padding: 6%;
     }
+
+    ol {
+        padding-left: 10%;
+    }
 }
 
